--- a/src/app/pages/basic-data/Subscriber/subscriber-cards/subscriber-cards.component.html
+++ b/src/app/pages/basic-data/Subscriber/subscriber-cards/subscriber-cards.component.html
@@ -39,6 +39,7 @@
         margin: 0;
     }
 
+
     @media print {
     .page {
       width: 210mm;
@@ -117,6 +118,32 @@
           ">{{SubscriberNameEn}}</p>
         </div>
       <!-- End English Name -->
+
+      <!-- Start Photo -->
+        <div class="photo"
+          style="
+          position: absolute;
+          height: 83px;
+          width: 78px;
+          top: 16px;
+          left: 27px;
+          text-align: left;
+          overflow: hidden;
+          border-radius: 50%;
+          padding: 0;
+          ">
+          <img [src]="imageUrl" alt=""
+          style="
+            margin: 0;
+            padding: 0;
+            background-position: left;
+            background-size: cover;
+            height: 83px;
+            width: 83px;
+            border-radius: 50%;
+          ">
+        </div>
+      <!-- End Photo -->
 
       <!-- Start Code -->
         <div class="code"
