--- a/src/app/pages/basic-data/Subscriber/subscriber-certificate/subscriber-certificate.component.html
+++ b/src/app/pages/basic-data/Subscriber/subscriber-certificate/subscriber-certificate.component.html
@@ -1014,11 +1014,11 @@
       </p>
 
       <div style="
-      max-width: 75%;
-      min-width: 75%;
+      max-width: 100%;
+      min-width: 100%;
       text-align: center !important;
       position: absolute;
-      left: 12.5%;
+      left: 0;
       top: 980px;">
 
         <p class="agtyaz" style="
@@ -1137,11 +1137,11 @@
     </p>
 
       <div style="
-      max-width: 75%;
-      min-width: 75%;
+      max-width: 100%;
+      min-width: 100%;
       text-align: center !important;
       position: absolute;
-      left: 12.5%;
+      left: 0;
       top: 960px;">
 
         <p class="agtyaz" style="
@@ -1261,11 +1261,11 @@
     </p>
 
       <div style="
-      max-width: 75%;
-      min-width: 75%;
+      max-width: 100%;
+      min-width: 100%;
       text-align: center !important;
       position: absolute;
-      left: 12.5%;
+      left: 0;
       top: 1060px;">
 
         <p class="agtyaz" style="
@@ -1385,11 +1385,11 @@
     </p>
 
       <div style="
-      max-width: 75%;
-      min-width: 75%;
+      max-width: 100%;
+      min-width: 100%;
       text-align: center !important;
       position: absolute;
-      left: 12.5%;
+      left: 0;
       top: 1050px;">
 
         <p class="agtyaz" style="
@@ -1509,11 +1509,11 @@
     </p>
 
       <div style="
-      max-width: 75%;
-      min-width: 75%;
+      max-width: 100%;
+      min-width: 100%;
       text-align: center !important;
       position: absolute;
-      left: 12.5%;
+      left: 0;
       top: 1050px;">
 
         <p class="agtyaz" style="
@@ -1633,11 +1633,11 @@
     </p>
 
       <div style="
-      max-width: 75%;
-      min-width: 75%;
+      max-width: 100%;
+      min-width: 100%;
       text-align: center !important;
       position: absolute;
-      left: 12.5%;
+      left: 0;
       top: 1020px;">
 
         <p class="agtyaz" style="
@@ -1757,11 +1757,11 @@
     </p>
 
       <div style="
-      max-width: 75%;
-      min-width: 75%;
+      max-width: 100%;
+      min-width: 100%;
       text-align: center !important;
       position: absolute;
-      left: 12.5%;
+      left: 0;
       top: 1010px;">
 
         <p class="agtyaz" style="
@@ -1881,11 +1881,11 @@
     </p>
 
       <div style="
-      max-width: 75%;
-      min-width: 75%;
+      max-width: 100%;
+      min-width: 100%;
       text-align: center !important;
       position: absolute;
-      left: 12.5%;
+      left: 0;
       top: 1020px;">
 
         <p class="agtyaz" style="
